Regression(r203848): 百度糯米 app fails to load content due to a JavaScript error https://bugs.webkit.org/show_bug.cgi?id=163967 <rdar://problem/28707838>

Reviewed by Ryosuke Niwa.

Add quirk for 百度糯米 app making the 2 last parameters to Event.prototype.initEvent()
optional.

No new tests, change only impacts this specific application.

* bindings/scripts/CodeGeneratorJS.pm:
(GeneratePropertiesHashTable):
* dom/Event.cpp:
(WebCore::Event::initEventForBindings):
* dom/Event.h:
* dom/Event.idl:
* platform/RuntimeApplicationChecks.h:
* platform/RuntimeApplicationChecks.mm:
(WebCore::IOSApplication::isBaiduNuomi):

Canonical link: https://commits.webkit.org/181761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207908 268f45cc-cd09-0410-ab3c-d52691b4dbfc