Source/WebCore/dom/Event.h
@@ -27,6 +27,7 @@
 #include "DOMTimeStamp.h"
 #include "EventInit.h"
 #include "EventInterfaces.h"
+#include "ExceptionOr.h"
 #include "ScriptWrappable.h"
 #include <wtf/RefCounted.h>
 #include <wtf/TypeCasts.h>
@@ -38,6 +39,7 @@ class DataTransfer;
 class EventPath;
 class EventTarget;
 class HTMLIFrameElement;
+class ScriptExecutionContext;
 
 enum EventInterface {
 
@@ -95,6 +97,8 @@ public:
     virtual ~Event();
 
     WEBCORE_EXPORT void initEvent(const AtomicString& type, bool canBubble, bool cancelable);
+    ExceptionOr<void> initEventForBindings(ScriptExecutionContext&, const AtomicString& type, bool bubbles); // Quirk.
+
     bool isInitialized() const { return m_isInitialized; }
 
     const AtomicString& type() const { return m_type; }
