Source/WebCore/platform/RuntimeApplicationChecks.h
@@ -75,6 +75,7 @@ WEBCORE_EXPORT bool isTheEconomistOnIphone();
 WEBCORE_EXPORT bool isWebProcess();
 bool isIBooks();
 WEBCORE_EXPORT bool isTheSecretSocietyHiddenMystery();
+bool isBaiduNuomi();
 
 } // IOSApplication
 
